# haskell-fun

./: notes.txt  open-questions.txt
chapter-10/: dbItem.hs  exercises.hs  questions.md  scans.hs
chapter-11/: as-patterns.hs  binary-tree.hs  construct-deconstruct-values.hs  hutton.hs  jammin.hs  list-type-no-infix.hs  newtype.hs  normal-form.hs  phone.hs  questions.md  sum-types.hs  type-and-data-constructors.hs  vigenere-cipher.hs
chapter-12/: either-utilities.hs  either-validating.hs  exercises.hs  maybe-utilities.hs  maybe.hs  my-iterate-unfoldr.hs  questions.txt
chapter-13/: exercises-2.hs  exercises.hs
chapter-13/hangman/: hangman.cabal
chapter-13/hangman/src/: Hangman.hs  Main.hs
chapter-13/hangman/tests/: tests.hs
chapter-14/baby-steps/: ArbitraryPlayground.hs  README.md  baby-steps.cabal
chapter-14/baby-steps/app/: CoArbitrary.hs.tmp  Main.hs  PropertyTestingExercises.hs  WordNumberTests.hs
chapter-14/morse-code/: morse.cabal
chapter-14/morse-code/src/: Main.hs  Morse.hs
chapter-14/testing/: Addition.cabal  Addition.hs
chapter-14/testing/trivial-playground/: trivial.hs
chapter-15/: madness.hs  optional.hs
chapter-15/exercises/semigroups-exercises/: README.md  semigroups-exercises.cabal
chapter-15/exercises/semigroups-exercises/app/: Main.hs
chapter-15/orphan-instance/: ListyInstances.hs
chapter-15/testing-laws/testing-laws/: README.md  testing-laws.cabal
chapter-15/testing-laws/testing-laws/app/: Main.hs
chapter-16/: exercises.hs  functors1.hs  functors2.hs  io.hs  natural-transformations.hs  tuples-and-either.hs
chapter-16/quickcheck-functor-laws/functor-laws/: README.md  functor-laws.cabal
chapter-16/quickcheck-functor-laws/functor-laws/app/: Main.hs
chapter-17/: applicative.hs  validate-person.hs
chapter-17/laws/: laws.cabal
chapter-17/laws/app/: App1.hs  ApplicativeForZipList.hs  ChapterExercises.hs  Main.hs  ValidationApplicative.hs  Vowels.hs
chapter-18/: composition-with-kleisli.hs  cow-maybe.hs  either-monad.hs  foo.hs  last-exercises.hs
chapter-18/monad-checkers/: README.md  monad-checkers.cabal
chapter-18/monad-checkers/app/: Main.hs  chapter-exercises.hs
chapter-19/shawty-prime/: shawty.cabal
chapter-19/shawty-prime/app/: Main.hs
chapter-19/simple-scotty/: README.md  simple-scotty.cabal
chapter-19/simple-scotty/app/: Main.hs
chapter-2/: basics.hs  fun-with-fun.hs  test.hs
chapter-20/: chapter-exercises.hs  foldable.hs
chapter-21/: traverable.hs
chapter-21/laws/: laws.cabal
chapter-21/laws/app/: Main.hs
chapter-22/: reader-exercises.hs  reader-playground.hs
chapter-23/try-random/: README.md  try-random.cabal
chapter-23/try-random/app/: Main.hs
chapter-24/learn-parsers/: learn-parsers.cabal
chapter-24/learn-parsers/app/: Fractions.hs  Main.hs
chapter-25/: MonadTransformers.hs  Practise.hs
chapter-26/: ChapterExercises.hs  EitherT.hs  FixMe.hs  MaybeT.hs  OuterInner.hs  ReaderT.hs  StateT.hs
chapter-26/scotty-sample/scotty-sample/: README.md  scotty-sample.cabal
chapter-26/scotty-sample/scotty-sample/app/: CounterExercise.hs  ExceptTInAction.hs  Main.hs  MonadIOSample.hs
chapter-27/: CoreDump.hs  Exercises.hs  Strictness.hs  Tracing.hs
chapter-28/measure/: measure.cabal
chapter-28/measure/app/: ByteString.hs  DList.hs  Main.hs  Main2.hs  Map.hs  Memory.hi  Memory.hs  MutableVector.hs  Profiling.hi  Profiling.hs  Queue.hs  Sequence.hs  Set.hs  StringVsText.hs  Vector.hs  VectorSeveralUpdates.hs  VectoringMapFusion.hs
chapter-29/: WhatHappens.hs
chapter-29/io-chapter/: README.md  io-chapter.cabal
chapter-29/io-chapter/app/: NestedIO.hs
chapter-3-strings/: globalVsLocal.hs  print1.hs  print3-broken.hs  print3-flipped.hs  print3.hs  reverse.hs
chapter-30/: CustomException.hs  CustomExceptionWithContext.hs  WhySomeException.hs
chapter-4/: exercises-correct-syntax.hs  if-statements.hs  lists.hs  tuples.hs  type-basics.hs
chapter-5/: asserting-types.hs  currying.hs  ex-fix-me.hs  ex-impl-based-on-type.hs  exercises.hs  type-kwon-do.hs  type-signatures.txt
chapter-6/: classes.hs  declarations-exer.hs  exercises-2.hs  exercises.hs  foo.hs  match-the-types.hs  more-type-signatures.hs  numberish.hs  type-kwon-do.hs  typechecks.hs  weekdays.hs
chapter-7/: case-practise.hs  composition.hs  employees-hof.hs  exer-1.hs  exercises.hs  first-class-function.hs  guards.hs  pattern-matching-aka-deconstructing-tuples.hs  registeredUser1.hs
chapter-8/: recursion.hs  word-number.hs
chapter-9/: Ciphers.hs  exercises.hs  from-to.hs  list-comprehension.hs  maybe.hs  own-impl-of-standart-fns.hs  take-drop.hs
fingerd/: README.md  finger.db  fingerd.cabal
fingerd/src/: Debug.hs  Main.hs
