name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/morse-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010

test-suite morse-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     ,containers
                     , morse-code
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/morse-code
